[package]
name = "adventofcode2024"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "11"
path = "src/bin/day1/part1.rs"

[[bin]]
name = "12"
path = "src/bin/day1/part2.rs"

[[bin]]
name = "21"
path = "src/bin/day2/part1.rs"

[[bin]]
name = "22"
path = "src/bin/day2/part2.rs"

[[bin]]
name = "31"
path = "src/bin/day3/part1.rs"

[[bin]]
name = "32"
path = "src/bin/day3/part2.rs"

[[bin]]
name = "41"
path = "src/bin/day4/part1.rs"

[[bin]]
name = "42"
path = "src/bin/day4/part2.rs"

[[bin]]
name = "51"
path = "src/bin/day5/part1.rs"

[[bin]]
name = "52"
path = "src/bin/day5/part2.rs"

[[bin]]
name = "61"
path = "src/bin/day6/part1.rs"

[[bin]]
name = "62"
path = "src/bin/day6/part2.rs"

[[bin]]
name = "71"
path = "src/bin/day7/part1.rs"

[[bin]]
name = "72"
path = "src/bin/day7/part2.rs"

[[bin]]
name = "81"
path = "src/bin/day8/part1.rs"

[[bin]]
name = "82"
path = "src/bin/day8/part2.rs"

[[bin]]
name = "91"
path = "src/bin/day9/part1.rs"

[[bin]]
name = "92"
path = "src/bin/day9/part2.rs"

[[bin]]
name = "101"
path = "src/bin/day10/part1.rs"

[[bin]]
name = "102"
path = "src/bin/day10/part2.rs"

[[bin]]
name = "111"
path = "src/bin/day11/part1.rs"

[[bin]]
name = "112"
path = "src/bin/day11/part2.rs"

[[bin]]
name = "121"
path = "src/bin/day12/part1.rs"

[[bin]]
name = "122"
path = "src/bin/day12/part2.rs"

[[bin]]
name = "13"
path = "src/bin/day13/both.rs"

[[bin]]
name = "141"
path = "src/bin/day14/part1.rs"

[[bin]]
name = "142"
path = "src/bin/day14/part2.rs"

[[bin]]
name = "151"
path = "src/bin/day15/part1.rs"

[[bin]]
name = "152"
path = "src/bin/day15/part2.rs"

[[bin]]
name = "161"
path = "src/bin/day16/part1.rs"

[[bin]]
name = "162"
path = "src/bin/day16/part2.rs"

[[bin]]
name = "171"
path = "src/bin/day17/part1.rs"

[[bin]]
name = "172"
path = "src/bin/day17/part2.rs"

[[bin]]
name = "181"
path = "src/bin/day18/part1.rs"

[[bin]]
name = "182"
path = "src/bin/day18/part2.rs"

[[bin]]
name = "191"
path = "src/bin/day19/part1.rs"

[[bin]]
name = "192"
path = "src/bin/day19/part2.rs"

[[bin]]
name = "201"
path = "src/bin/day20/part1.rs"

[[bin]]
name = "202"
path = "src/bin/day20/part2.rs"

[[bin]]
name = "211"
path = "src/bin/day21/part1.rs"

[dependencies]
crossterm = "0.28.1"
itertools = "0.13.0"
rayon = "1.10.0"
regex = "1.11.1"
